--- a/container/pi-container/CMakeLists.txt
+++ b/container/pi-container/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.13)
 # initialize the SDK based on PICO_SDK_PATH
 # note: this must happen before project()
 include(pico_sdk_import.cmake)
+set(PICO_CXX_ENABLE_EXCEPTIONS 1)
 pico_sdk_init()
 
 # Set the path to the Pico SDK
@@ -14,14 +15,13 @@ add_executable(main
 )
 
 # add files motor_control.c and motor_control.h
-target_sources(main PRIVATE)
-
+target_sources(main PRIVATE types.h)
 
 # Add pico_stdlib library which aggregates commonly used features
 target_link_libraries(main pico_stdlib pico_multicore)
 
 # Add hardware pwm library
-target_link_libraries(main hardware_gpio hardware_i2c hardware_timer hardware_pwm)
+target_link_libraries(main hardware_gpio hardware_i2c hardware_timer hardware_pwm hardware_clocks)
 
 # config uart output USB
 pico_enable_stdio_usb(main 1)
